--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ favicon: favicon.ico
 
 repository: Apathyyi/Apathyyi.github.io
 github_url: https://github.com/Apathyyi
-url: http://www.APathyyi.com
+url: https://Apathyyi.github.io
 enforce_ssl: ityouknow.com
 
 ## Gem
