--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ favicon: favicon.ico
 repository: Apathyyi/Apathyyi.github.io
 github_url: https://github.com/Apathyyi
 url: https://www.apathyyi.com
-enforce_ssl: ityouknow.com
+enforce_ssl: apathyyi.com
 
 ## Gem
 plugins:
